--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
           </div>
           <div class="media">
             <div class="media-left">
-              <i class="fab fa-empire fa-4x aria-hidden="true"i>
+              <i class="fab fa-empire fa-4" aria-hidden="true"></i>
             </div>
             <div class="media-content">
               <div class="content">
